cabal-version:      2.4
name:               advent
version:            0.1.0.0

homepage:            
bug-reports:         

author:             Merijn Verstraaten
maintainer:         merijn@inconsistent.nl
copyright:          Copyright © 2020 Merijn Verstraaten

license:            GPL-3.0-only
license-file:       LICENSE

category:
build-type:         Simple
tested-with:        GHC == 8.10

-- synopsis:
-- description:

extra-source-files:  CHANGELOG.md

common all
  default-language:     Haskell2010
  ghc-options:          -Wall -fdefer-typed-holes

  build-depends:        base ^>= 4.14.0.0
               ,        containers ^>= 0.6.4.1
               ,        text ^>= 1.2.3.2

executable Day1
  import:               all
  main-is:              Day1.hs

executable Day2
  import:               all
  main-is:              Day2.hs
  build-depends:        megaparsec ^>= 9.0.1

executable Day3
  import:               all
  main-is:              Day3.hs

executable Day4
  import:               all
  main-is:              Day4.hs
  build-depends:        megaparsec ^>= 9.0.1

executable Day5
  import:               all
  main-is:              Day5.hs

executable Day6
  import:               all
  main-is:              Day6.hs

executable Day7
  import:               all
  main-is:              Day7.hs
  build-depends:        megaparsec ^>= 9.0.1

executable Day8
  import:               all
  main-is:              Day8.hs
  build-depends:        megaparsec ^>= 9.0.1
               ,        vector ^>= 0.12.1.2

executable Day9
  import:               all
  main-is:              Day9.hs

executable Day10
  import:               all
  main-is:              Day10.hs
  ghc-options:          -O2
